# ysz

./: README.md
YSZArt-master/: README.md
YSZPublic-master/: README.md
YSZPublic-master/Config/: ExcelToLua.exe.config  RunHorse.xls  card.xls  mask.xls  music.xls  musicGroup.xls  public.xls  room.xls  store.xls  string.xls  test.xls  testpublic.xls  testroom.xls  teststore.xls  teststring.xls  testvip.xls  vip.xls
YSZPublic-master/Document/: 大厅活动功能.docx  设置功能调整.docx
YSZPublic-master/Mindjet/: 金花玩法.mmap
YSZPublic-master/程序文档/: 服务器维护流程.docx  通信协议.docx
YSZSever-master/: README.md  计划表.xlsx
YSZSever-master/Server/: CMakeLists.txt  makerun  update_to_server
YSZSever-master/Server/cmake/: FindBoost.cmake  FindLibEvent.cmake  FindPlatform.cmake  FindPython.cmake
YSZSever-master/Server/database/: backstage.sql  game_inst.sql  game_log.sql  新建数据库.docx
YSZSever-master/Server/src/: CMakeLists.txt
YSZSever-master/Server/src/DBServer/: CMakeLists.txt  DBServer.cpp  DBServer.sln  DBServer.vcxproj  DBServer.vcxproj.filters  backup_mysql.sh  dbserver-autorun  dbserver-run  dbserver.conf
YSZSever-master/Server/src/DBServer/World/: DelaySaveMgr.cpp  DelaySaveMgr.h  DelaySelectMgr.cpp  DelaySelectMgr.h  ServerCommend.cpp  ServerCommend.h  ThreadWatch.cpp  World.cpp  World.h
YSZSever-master/Server/src/GameServer/: CMakeLists.txt  GameServer.cpp  GameServer.sln  GameServer.vcxproj  GameServer.vcxproj.filters  gameserver-autorun  gameserver-run  gameserver.conf
YSZSever-master/Server/src/GameServer/GameScript/: BlackList.lua  ConfigMgr.lua  GameScript.luaprj  NetMgr.lua  Protocol.lua  ServerConfig.lua  TestMsg.lua  UpdateMgr.lua  WhiteList.lua  init.lua
YSZSever-master/Server/src/GameServer/GameScript/Account/: Account.lua  AccountMgr.lua
YSZSever-master/Server/src/GameServer/GameScript/Backstage/: Backstage.lua
YSZSever-master/Server/src/GameServer/GameScript/Config/: card.lua  public.lua  room.lua  store.lua  test.lua  testpublic.lua  vip.lua
YSZSever-master/Server/src/GameServer/GameScript/Email/: EmailMgr.lua
YSZSever-master/Server/src/GameServer/GameScript/Rank/: RankMgr.lua
YSZSever-master/Server/src/GameServer/GameScript/Room/: Room.lua  RoomMgr.lua
YSZSever-master/Server/src/GameServer/GameScript/SmallHorn/: SmallHornMgr.lua
YSZSever-master/Server/src/GameServer/GameScript/Tools/: CommonFun.lua  Message.lua  ProtocolHandle.lua
YSZSever-master/Server/src/GameServer/World/: BackstageMgr.cpp  BackstageMgr.h  ServerCommend.cpp  ServerCommend.h  ThreadWatch.cpp  ThreadWatch.h  World.cpp  World.h
YSZSever-master/Server/src/HubServer/: CMakeLists.txt  HubServer.cpp  HubServer.sln  HubServer.vcxproj  HubServer.vcxproj.filters  hubserver-autorun  hubserver-run  hubserver.conf
YSZSever-master/Server/src/HubServer/HubScript/: ConfigMgr.lua  HubScript.luaprj  NetMgr.lua  Protocol.lua  ServerConfig.lua  TestMsg.lua  UpdateMgr.lua  init.lua
YSZSever-master/Server/src/HubServer/HubScript/Account/: AccountMgr.lua
YSZSever-master/Server/src/HubServer/HubScript/Config/: server.lua
YSZSever-master/Server/src/HubServer/HubScript/Tools/: CommonFun.lua  Message.lua
YSZSever-master/Server/src/HubServer/World/: ServerCommend.cpp  World.cpp  World.h
YSZSever-master/Server/src/Public/: Protocol.h  ServerDefine.h
YSZSolution-master/: README.md
YSZSolution-master/YSZClient/Assets/Editor/: ExportLuaSyntax.cs
YSZSolution-master/YSZClient/Assets/Editor/Lua/Template/: UILuaTempalte.lua
YSZSolution-master/YSZClient/Assets/EditorTool/UGUIFontEditorTool/Editor/: FontMakerWizard.cs
YSZSolution-master/YSZClient/Assets/LuaScript/: GameConfig.lua  GameData.lua  LoginMgr.lua  LuaDebug.lua  LuaUtility.lua  PlatformBridge.lua  StartUp.lua
YSZSolution-master/YSZClient/Assets/LuaScript/Config/: ChipConfig.lua  MailContentConfig.lua  MaskConfig.lua  MusicConfig.lua  MusicGroupConfig.lua  PublicConfig.lua  RoomConfig.lua  RunHorseConfig.lua  StoreConfig.lua  StringConfig.lua  VipConfig.lua
YSZSolution-master/YSZClient/Assets/LuaScript/Net/: HubServerClient.lua  NetMsgHandler.lua  Protrocol.lua
YSZSolution-master/YSZClient/Assets/LuaScript/UILua/: UIConvert.lua  UICreateRoom.lua  UIJoinRoom.lua
YSZSolution-master/YSZClient/Assets/Primitives/UISpritePrefab/: sprite_Club_10.prefab  sprite_Club_11.prefab  sprite_Club_12.prefab  sprite_Club_13.prefab  sprite_Club_14.prefab  sprite_Club_2.prefab  sprite_Club_3.prefab  sprite_Club_4.prefab  sprite_Club_5.prefab  sprite_Club_6.prefab  sprite_Club_7.prefab  sprite_Club_8.prefab  sprite_Club_9.prefab  sprite_Club_b_10.prefab  sprite_Club_b_11.prefab  sprite_Club_b_12.prefab  sprite_Club_b_13.prefab  sprite_Club_b_14.prefab  sprite_Club_b_2.prefab  sprite_Club_b_3.prefab  sprite_Club_b_4.prefab  sprite_Club_b_5.prefab  sprite_Club_b_6.prefab  sprite_Club_b_7.prefab  sprite_Club_b_8.prefab  sprite_Club_b_9.prefab  sprite_Diamond_10.prefab  sprite_Diamond_11.prefab  sprite_Diamond_12.prefab  sprite_Diamond_13.prefab  sprite_Diamond_14.prefab  sprite_Diamond_2.prefab  sprite_Diamond_3.prefab  sprite_Diamond_4.prefab  sprite_Diamond_5.prefab  sprite_Diamond_6.prefab  sprite_Diamond_7.prefab  sprite_Diamond_8.prefab  sprite_Diamond_9.prefab  sprite_Diamond_b_10.prefab  (+114 more)
YSZSolution-master/YSZClient/Assets/Scenes/: Start.unity
YSZSolution-master/YSZClient/Assets/Scripts/Other/: EventDispatcher.cs  GameManager.cs  MagnifyGlassUI.cs  Main.cs  Master.cs  TimeManager.cs
YSZSolution-master/YSZClient/Assets/Scripts/Utility/: ExtendDefine.cs  MiniJson.cs  PlatformBridge.cs  Utility.cs
YSZSolution-master/YSZClient/Assets/StreamingAssets/Android/: FileList.xml
YSZSolution-master/YSZClient/Assets/XLua/: CHANGELOG.txt
YSZSolution-master/YSZClient/Assets/XLua/Extend/: Directory.cs  LuaBehaviour.cs  LuaConst.cs  LuaManager.cs  LuaWindowBase.cs
YSZSolution-master/YSZClient/Assets/XLua/Src/: LuaEnv.cs  LuaTable.cs  MethodWarpsCache.cs  ObjectCasters.cs  ObjectTranslator.cs  Utils.cs
YSZSolution-master/YSZClient/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+220 files in other folders)
